fix layout bug

--- a/components/Layout/Layout.module.scss
+++ b/components/Layout/Layout.module.scss
@@ -1,3 +1,8 @@
 .svg {
     @include hidden();
 }
+
+.container {
+    max-width: $site-width;
+    margin: 0 auto;
+}
